--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/Javascript//BasicFoundationTwo.js"
+            "program": "${workspaceFolder}/Algorithms/Algorithms.js"
         }
     ]
 }
